# GHWs

./: .gitignore  CITATION.cff  README.md  pyproject.toml
GHWs/: GHWs.py  __init__.py  core.py
Tests/: test_GHWs.sage  test_GHWs_low_mem.sage  test_change_k.sage  test_change_q.sage  test_change_r.sage  test_hierarchy_ghw.sage  test_normal_low_mem.sage
